Fri Jun 11 13:17:28 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Subscriber_Base_T.cpp:
          Using duplicate to return interfaces.

        * connectors/dds4ccm/tests/NonChangeableAttribute/Base/NonChangeable_Base.mpc:
        * connectors/dds4ccm/tests/NonChangeableAttribute/Component/NonChangeable_Component.idl:
        * connectors/dds4ccm/tests/NonChangeableAttribute/Component/NonChangeable_Component.mpc:
        * connectors/dds4ccm/tests/NonChangeableAttribute/Component/NonChangeable_Component_exec.h:
        * connectors/dds4ccm/tests/NonChangeableAttribute/Component/NonChangeable_Component_exec.cpp:
        * connectors/dds4ccm/tests/NonChangeableAttribute/Connector/NonChangeable_Connector.idl:
        * connectors/dds4ccm/tests/NonChangeableAttribute/Connector/NonChangeable_Connector.mpc:
        * connectors/dds4ccm/tests/NonChangeableAttribute/descriptors/Plan.cdp:
          Reorganized.

Fri Jun 11 13:02:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/tests/AsynchT/Base/AsynchT.mpc:
        * connectors/ami4ccm/tests/DelReplyH/Base/DelReplyH.mpc:
        * connectors/ami4ccm/tests/DelReplyH/Sender/DelReplyH_Sender_exec.h:
        * connectors/ami4ccm/tests/Exceptions/Base/ExceptionT.mpc:
        * connectors/ami4ccm/tests/IDL_Test/AMI4CCM_IDLTest.mpc:
        * connectors/ami4ccm/tests/InterInArgs/Base/InterInArgsT.mpc:
        * connectors/ami4ccm/tests/InterMulti/Base/InterMulti.mpc:
        * connectors/ami4ccm/tests/InterOutArgs/Base/InterOutArgsT.mpc:
        * connectors/ami4ccm/tests/InterReturn/Base/InterReturnT.mpc:
        * connectors/ami4ccm/tests/NoReplyH/Base/NoReplyH.mpc:
        * connectors/ami4ccm/tests/OneProcess/Base/OneProcess.mpc:
        * connectors/ami4ccm/tests/OneReplyH/Base/OneReplyH.mpc:
        * connectors/ami4ccm/tests/UsesMulti/Base/UsesMulti.mpc: